[package]
name = "plonkit"
version = "0.1.0"
authors = [ "Roman Semenov <semenov.roma@gmail.com>", "Zhuo Zhang <mycinbrin@gmail.com>", "Haoyu LIN <chris.haoyul@gmail.com>" ]
description = "Library for working with circom circuits in plonk proof system"
homepage = "https://github.com/Fluidex/plonkit"
license = "MIT"
repository = "https://github.com/Fluidex/plonkit"
edition = "2018"

[lib]
crate-type = [ "cdylib", "lib" ]

[[bin]]
name = "plonkit"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.34"
bellman_ce = { path = "../bellman", default-features = false, features = [ "plonk" ] } # active features depend on build type
bellman_vk_codegen = { path = "../solidity_plonk_verifier/bellman_vk_codegen" }
byteorder = "1"
cfg-if = "1.0.0"
clap = { package = "clap-v3", version = "3.0.0-beta.1" } # todo: replace with official v3 when it's released to crates.io
env_logger = "0.8.2"
exitcode = "1.1.2"
futures = "0.3"
hex-literal = "0.2.1"
itertools = "0.8.1"
log = "0.4.11"
num-bigint = "0.2.3"
num-traits = "0.2.8"
prost = { version = "0.7.0", optional = true }
rand = "0.4"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
tokio = { version = "*", features = [ "rt-multi-thread", "signal", "sync" ], optional = true }
tonic = { version = "0.4.0", optional = true }
web3 = {version = "0.8.*", default_features = false }
primitive-types = {version = "0.8.0", features = ["serde", "serde_no_std"]}
ff = {package = "ff_ce", version = "0.12.*", features = ["derive"]}
hex = { version = "0.4", default-features = false }
handlebars = "3.*"
[build-dependencies]
cfg-if = "1.0.0"
tonic-build = "0.4.0"

[features]
default = [ "bellman_ce/multicore", "solidity" ]
solidity = [ ]
server = [ "tonic", "prost", "tokio" ]
windows_build = [ "server" ]
